# lsl-tools

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
bcipy-scripts/: receive.py
consume/: receive.py
pylsl-scripts/: receive.py
scripts/: analyze_timestamps.py  receive.py  send_serial_trigger.py
tests/: __init__.py  test_photodiode.py  test_pylsl_recieve.py  test_pylsl_unified_receive.py
tests/consume/: test_pylsl_recieve.py
tools/: config.py  photodiode_experiment.py
tools/consume/: receive.py  unified_receive.py
tools/display/: difference.py  offset.py  timestamp_diffs.py  timestamps.py
tools/experiment/: oddball.py  photodiode.py
