[build-system]
requires = ["setuptools>=58.1.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "lsl-tools"
version = "0.1.0"
description = "Tools for working with Lab Streaming Layer (LSL) streams."
authors = [
    { name = "Wearable Sensing" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pylsl==1.16.2",
    "scipy==1.11.4",
    "pandas==2.3.1",
]

license = { file = "LICENSE" }

[project.optional-dependencies]
dev = [
    "mypy==1.10.0",
    "black==23.7.0",
    "coverage[toml]==7.3.2",
]

test = [
    "coverage[toml]==7.3.2"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests", "demo", "scripts"]

[tool.coverage.run]
omit = [
    "tests/*",
]

[tool.coverage.report]

[tool.mypy]
warn_return_any = false
warn_unused_configs = false
ignore_missing_imports = true
follow_imports = "skip"
strict_optional = true
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
exclude = [
    "build/.*",
    "scripts/.*",
    "acquisition/.*",
    "display/paradigm/.*",
    "signal/model/.*",
    "task/control/.*",
    "core/parameters/.*"
]

[tool.black]
line-length = 120
